
[tool.poetry]
name = "ekuru_TFT"
version = "0.0.1"
description = "A temporal fusion transformer implementation for time series forecasting utilizing relevant tweets about the stocks."
authors = ["Emre Kuru <emre.kuru@ozu.edu.tr>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11.0, < 4.0.0"
torch = "^2.3.1"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
wordcloud = "^1.9.3"
transformers = "^4.45.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.0"
gitpython = "^3.1.43"
ipykernel = "^6.29.5"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true